# Howlify

./: .gitignore  Dockerfile  Procfile  README.md  ROADMAP.md  app.py  app_dev.py  config.py  daily_job.py  docker-compose.yml  dockerfile  howlify.db  listar_logs.py  pyproject.toml  requirements.txt  start.sh  test_airbnb.py  test_lobo.py  test_lobo_pro.py  test_monitor.py  test_playwright.py  test_playwright_evidence.py  test_reporte.py  test_wa.py
_backups_limpieza/: app.py.bak  hunter_vuelos.py
_backups_limpieza/legacy/: auth_sqlite.py  main_app.py
_backups_limpieza/legacy/db/: database_sqlite.py
auth/: auth_supabase.py  security.py  supabase_client.py
db/: database.py
deploy/: offerhunter-web.service  offerhunter-worker.service
engine/: backend.py  engine.py  worker.py
frontend/: streamlit_app.py
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css
frontend-react/src/api/: client.ts
frontend-react/src/components/: CazaCard.tsx  Logo.tsx  PageTransition.tsx  SkeletonCard.tsx  Toast.tsx
frontend-react/src/context/: AuthContext.tsx
howlify/: __main__.py
howlify/api/: main.py
scraper/: airbnb.py  alertas.py  despegar.py  generic.py  scraper_pro.py
scripts/: mercadolibre_monitor.py  ml_connect.py  run_api.sh  telegram_connect.py
services/: business_service.py  database_service.py  duffel_service.py  notification_service.py  price_audit_service.py  public_deals_service.py  telegram_service.py  whatsapp_service.py
utils/: affiliate.py  cache.py  currency.py  logic.py  proxy.py
(+7 files in other folders)
